*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
@@ -12,14 +12,18 @@
   <H2>
 Repository providers</H2>
 <P >
-Providers are registered as a project nature.</P>
-<P >Only one team nature per project.</P>
-<P >This is where you can register all of your other core hooks for manipulating
-resources (open/save, move/delete)</P>
+A repository provider (<b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
+Provider</a></b>) is the central class in the implementation of your
+repository.&nbsp; This class is responsible for configuring a project for
+repository management and providing the necessary hooks for resource
+modification.&nbsp; Providers are associated with a project using the <a href="resAdv_natures.htm">project
+nature</a> mechanism.&nbsp; Team natures are part of a predefined project nature
+set to ensure that only one team nature is assigned per project.</P>
 <P >
-To implement your own provider, you need to define an extension for the project
-natures extension point and supply a class derived from <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
-Provider</a></b>.</P>
+To implement a provider, you must define a project nature and supply a class
+derived from&nbsp; <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
+Provider</a></b>.&nbsp; We'll use the CVS client as an example to see how this
+works.</P>
 
 <p>
    &nbsp;
