*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
@@ -17,8 +17,7 @@ Provider</a></b>) is the central class in the implementation of your
 repository.&nbsp; This class is responsible for configuring a project for
 repository management and providing the necessary hooks for resource
 modification.&nbsp; Providers are associated with a project using the <a href="resAdv_natures.htm">project
-nature</a> mechanism.&nbsp; Team natures are part of a predefined project nature
-set to ensure that only one team nature is assigned per project.</P>
+nature</a> mechanism.&nbsp;&nbsp;</P>
 <P >
 To implement a provider, you must define a project nature and supply a class
 derived from&nbsp; <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
