--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_define.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_define.htm
@@ -13,24 +13,23 @@
 <H3>
 Defining a provider</H3>
 <P >
-The <a href="../reference/extension-points/org_eclipse_core_resources_natures.html"> <b> org.eclipse.core.resources.natures</b></a> extension point is used to add a project nature definition.&nbsp;</P>
-<P >(This will use an example rather than CVS...)</P>
+The <a href="../reference/extension-points/org_eclipse_core_resources_natures.html"> <b> org.eclipse.core.resources.natures</b></a> extension point is used to add a project nature definition.&nbsp;
+Here is the markup for the CVS client.</P>
 <font color='#4444CC'><pre>&lt;extension 
 	point=&quot;org.eclipse.core.resources.natures&quot; 
 	id=&quot;cvsnature&quot; 
 	name=&quot;%cvsNature&quot;&gt;
 	&lt;runtime&gt;
-		&lt;run class=&quot;org.eclipse.team.internal.ccvs.core.CVSTeamProvider&quot;/&gt;
+		&lt;run class=&quot;<b>org.eclipse.team.internal.ccvs.core.CVSTeamProvider</b>&quot;/&gt;
 	&lt;/runtime&gt;
-	&lt;one-of-nature id=&quot;org.eclipse.team.repository-provider&quot;/&gt;
+	&lt;<b>one-of-nature id=&quot;org.eclipse.team.repository-provider&quot;</b>/&gt;
 &lt;/extension&gt;</pre>
-<p>Explain above...
+<p>The project nature must be declared as one of the nature set &quot;org.eclipse.team.repository-provider.&quot;&nbsp;
+This ensures that only one repository provider can be assigned to any given
+project.&nbsp; The run class for the nature must extend <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
+Provider</a></b>.
 </p>
 </font>
-
-<p>
-   &nbsp;
-</p>
 
 
 
