*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider.htm
@@ -12,16 +12,14 @@
   <H2>
 Repository providers</H2>
 <P >
-A repository provider (<b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
-Provider</a></b>) is the central class in the implementation of your
+A repository provider (<b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>) is the central class in the implementation of your
 repository.&nbsp; This class is responsible for configuring a project for
 repository management and providing the necessary hooks for resource
 modification.&nbsp; Providers are associated with a project using the <a href="resAdv_natures.htm">project
 nature</a> mechanism.&nbsp;&nbsp;</P>
 <P >
 To implement a provider, you must define a project nature and supply a class
-derived from&nbsp; <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
-Provider</a></b>.&nbsp; We'll use the CVS client as an example to see how this
+derived from&nbsp; <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>.&nbsp; We'll use the CVS client as an example to see how this
 works.</P>
 
 <p>
