*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_define.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_define.htm
@@ -26,8 +26,7 @@ Here is the markup for the CVS client.</P>
 &lt;/extension&gt;</pre>
 <p>The project nature must be declared as one of the nature set &quot;org.eclipse.team.repository-provider.&quot;&nbsp;
 This ensures that only one repository provider can be assigned to any given
-project.&nbsp; The run class for the nature must extend <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
-Provider</a></b>.
+project.&nbsp; The run class for the nature must extend <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>.
 </p>
 </font>
 
