--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_implement.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_implement.htm
@@ -20,8 +20,7 @@ The CVS client serves as a good example.&nbsp; Its repository provider is <b>CVS
 <font color='#4444CC'><pre>
    public class CVSTeamProvider extends RepositoryProvider {
 
-	...</pre><p> <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">Repository
-Provider</a> </b>defines two abstract methods, <b>configureProject</b> and <b>deconfigure</b>.&nbsp;
+	...</pre><p> <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a> </b>defines two abstract methods, <b>configureProject</b> and <b>deconfigure</b>.&nbsp;
 All providers must implement these methods.&nbsp; </p><p>A project is configured
 when it is first associated with a particular repository provider.&nbsp; This is
 the appropriate time to compute or cache any data about the project.&nbsp; The
