*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_find.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_find.htm
@@ -11,12 +11,19 @@
 <BODY BGCOLOR="#ffffff">
 <h3>
    Finding a provider
-</h3><p>
-   Discuss the static methods in RepositoryProvider
+</h3><p>Static methods in <font color="#4444CC"><b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b></font>
+make it easy for clients to find the providers associated with a given project.
 </p>
-<p>
-   &nbsp;
-</p>
+<ul>
+  <li><b>getProvider(IProject)</b> - answers the provider for a given
+    project.&nbsp; Can be used to find any team provider for a project.&nbsp; </li>
+  <li><b>getProvider(IProject, String) </b>- answers the provider for a given
+    project with the specified provider id.&nbsp; Can be used to check whether a
+    particular team provider type is associated with a given project.&nbsp; It
+    is commonly used by providers to quickly check whether a given project is
+    under their care.&nbsp; This call is safer for clients since it does not
+    return a provider that does not match the client's id.</li>
+</ul>
 
 
 
