*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources.htm
@@ -11,11 +11,18 @@
 <BODY BGCOLOR="#ffffff">
   <H2>
 Repository resource management</H2>
-<p>In the context of a repository, there are additional issues associated with
-resource management.</p>
-<p>
-   &nbsp;
-</p>
+  <p>Once a project is under the management of a <font color="#4444CC"><b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>,</font>
+  other plug-ins may want to indicate special handling for their projects and
+  files.&nbsp; The team plug-in defines extension points that other providers
+  and other plug-ins can use to register file types and to declare files that
+  should not be subject to repository management.</p>
+
+
+
+
+  <p>Team providers can also register a class that can be used to persist a set
+  a projects so that references to the project can be shared across a team, with
+  the actual contents coming from the repository.</p>
 
 
 
