*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources_projects.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources_projects.htm
@@ -10,11 +10,22 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Project sets</h3>
-<p>The need to pass projects around, specialized export that allows one to
-reconstruct a project from a repository.&nbsp; (Is this right?)</p>
-<h4>Project metadata</h4>
-<p>Mention that it's up to the plug-in to define file structure/naming for any
-metadata that it needs to keep about its projects.</p>
+<p>Since the resources inside a project under version control are kept in the
+repository, it is possible to share projects with team members by sharing a
+reference to the repository specific information needed to reconstruct a project
+in the workspace.&nbsp; This is done using a special type of file export for <b>team
+project sets</b>.&nbsp;&nbsp;</p>
+<p><img border="0" src="images/projectset.jpg" width="470" height="550"></p>
+<p>The <a href="../reference/extension-points/org_eclipse_team_ignore.html">org.eclipse.team.projectSets</a>
+extension point allows repository providers to declare a class that implements
+project saving for projects under their control.&nbsp; When the user chooses to
+export project sets, only the projects configured with repositories that define
+project sets are shown as candidates for export.</p>
+<p>For example, the CVS client declares the following:</p>
+<pre><font color="#4444CC">&lt;extension point=&quot;org.eclipse.team.core.projectSets&quot;&gt;
+	&lt;projectSet id=&quot;org.eclipse.team.cvs.core.cvsnature&quot; class=&quot;org.eclipse.team.internal.ccvs.ui.CVSProjectSetSerializer&quot;/&gt;
+&lt;/extension&gt;</font></pre>
+<p>The specified class must implement <a href="../reference/api/org/eclipse/team/core/IProjectSetSerializer.html">IProjectSetSerializer</a>.</p>
 <p>
    &nbsp;
 </p>
