*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui.htm
@@ -12,8 +12,23 @@
 <h2>
    Building a team UI
 </h2><p>
-   Philosophy:&nbsp; You define the UI and workflow.&nbsp; We provide standard
-   hooks/slots.
+   The team UI plug-in is based on the philosophy that the team subsystem should
+   provide simple hooks and slots for providers to add their UI
+   implementation.&nbsp; Rather than define standard team operations, the team
+   plug-in leaves the workflow up to the provider implementation.&nbsp; All it
+   does in the way of defining actions and preferences is to define a
+   &quot;Team&quot; slot where you can add your specific UI elements.
+</p>
+<p>We've seen that some of the core team extensions, such as ignored files, file
+types, and project sets, influence the UI via the preferences dialog.&nbsp;
+Otherwise, you must build your own UI by designing the actions that your
+repository supports and in what views and editors these actions are
+accessible.&nbsp; The implementation for your UI is done with the <a href="workbench_basicext.htm">standard
+workbench extension points</a>.&nbsp; In addition, you can define your own
+preferences which plug in to the standard framework.&nbsp; You may even need to
+build your own views to present repository specific information and operations.
+(The CVS client implements its own views for synchronizing with the repository
+and navigating the repository.)
 </p>
 <p>
    &nbsp;
