*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
@@ -10,11 +10,53 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Team decorators </h3>
-<p>Often we use decorators in the same views where we added actions.&nbsp; Show
-an example.</p>
-<p>
-   &nbsp;
+<p>Since any view that shows resources can contain projects that are configured
+with different team providers, it is helpful for team providers to contribute <a href="workbench_advext_decorators.htm">decorators</a>
+that distinguish resources configured for their repository.&nbsp; The CVS client
+uses decorators to show information such as a dirty flag, tags, keywords, and
+revisions.
 </p>
+
+
+
+
+<p><img border="0" src="images/teamdecorators.jpg" width="331" height="380">
+</p>
+
+
+
+
+<p>Some decorators may be expensive to compute, so it's a good idea to allow the
+users some control over the use, or even content, of decorators.&nbsp; The CVS
+client provides a preference page that allows users to control the presentation
+and content of decorators.
+</p>
+
+
+
+
+<p>See <a href="../reference/extension-points/org_eclipse_ui_decorators.html">org.eclipse.ui.decorators</a>
+for a complete description of the decorator extension point.&nbsp; The CVS
+decorator markup is as follows:
+</p>
+
+
+
+
+<pre><font color="#4444CC">&lt;extension
+     point=&quot;org.eclipse.ui.decorators&quot;&gt;
+  &lt;decorator
+        objectClass=&quot;org.eclipse.core.resources.IResource&quot;
+        adaptable=&quot;true&quot;
+        label=&quot;%DecoratorStandard.name&quot;
+        state=&quot;false&quot;
+        class=&quot;org.eclipse.team.internal.ccvs.ui.CVSDecorator&quot;
+        id=&quot;org.eclipse.team.cvs.ui.decorator&quot;&gt;
+     &lt;description&gt;
+        %DecoratorStandard.description
+     &lt;/description&gt;
+  &lt;/decorator&gt;
+&lt;/extension&gt;</font></pre>
 
 
 
