*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_prefs.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_prefs.htm
@@ -10,7 +10,27 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Adding preferences and properties</h3>
-<p>Discuss the team slot for these things and show an example</p>
+<p><a href="preferences_prefs.htm">Preferences</a> and <a href="preferences_prop.htm">properties</a>
+can be contributed by team UI plug-ins using the standard techniques.&nbsp; The
+only difference for a team plug-in is that preferences should be contributed
+using the team category, so that all team related preferences are grouped
+together.&nbsp; The CVS markup for the main preferences page looks like this:</p>
+<pre><font color="#4444CC">&lt;extension
+      point=&quot;org.eclipse.ui.preferencePages&quot;&gt;
+   &lt;page
+         name=&quot;%PreferencePage.name&quot;
+         <b>category=&quot;org.eclipse.team.ui.TeamPreferences&quot;</b>
+         class=&quot;org.eclipse.team.internal.ccvs.ui.CVSPreferencesPage&quot;
+         id=&quot;org.eclipse.team.cvs.ui.CVSPreferences&quot;&gt;
+   &lt;/page&gt;
+&lt;/extension&gt;</font></pre>
+<p>The preferences dialog shows the CVS preferences underneath the team
+category.</p>
+<p><img border="0" src="images/teamprefs.jpg" width="641" height="532"></p>
+<p>&nbsp;</p>
+<p>Properties are added as described by <a href="../reference/extension-points/org_eclipse_ui_propertyPages.html">org.eclipse.ui.propertyPages</a>.&nbsp;
+There is no special team category for properties, since a resource can only be
+configured for one repository provider at a time.</p>
 <p>
    &nbsp;
 </p>
