*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_infopops.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_infopops.htm
@@ -19,8 +19,9 @@ particular SWT widget in a plug-in's user interface.&nbsp; It displays
 context-sensitive help and links to related help topics for the widget.&nbsp; It
 is activated when the user puts focus on the widget and presses the F1 key.
 </p><p>To associate an infopop with a widget, you must first assign a context ID
-to the widget and then provide the description and links for the infopop.
-</p><p>&lt;SHOW SCREEN SNAP OF INFOPOP on the WORKBENCH&gt;
+to the widget and then provide the description and links for the infopop.&nbsp;
+Here is an infopop that has been defined on a workbench preferences page:
+</p><p><img border="0" src="images/infopops.jpg" width="452" height="237">
 </p></font>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
