*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -59,9 +59,15 @@ referred to from some toc that is a primary toc or is linked in by a primary
 toc. </P>
 
 <P >That's it. If you copy your plug-in directory to the platform's <b> plugins</b> directory, start the platform, and choose
-<b> Help-&gt;Help Contents</b>, you should see the following: </P>
+<b> Help-&gt;Help Contents</b>, you should see your example appear in the list
+of books: </P>
 
-&lt;UPDATED SCREEN SNAP&gt;
+<P ><img border="0" src="images/help_books.jpg" width="240" height="228"> </P>
+
+<p>&nbsp;</p>
+<p>If you click on the &quot;Online Help Sample&quot;, you'll see your toc
+structure.</p>
+<p><img border="0" src="images/help_contents.jpg" width="918" height="598"></p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
