--- a/org.eclipse.jdt.source/about.html
+++ b/org.eclipse.jdt.source/about.html
@@ -20,19 +20,16 @@ body { font-family: arial, helvetica, geneva; font-size: 10pt; clip: rect(   ); 
   </tr>
   <tr> 
     <td> 
-      <p>31 May, 2002</p>	
+<p>10th June, 2002</p>	
 <h3>License</h3>
-<p>Eclipse.org makes available all content in this plug-in (&quot;Content&quot;).  Unless otherwise indicated below, the Content is provided to you under 
-the terms and conditions of the <a href="http://www.eclipse.org/legal/cpl-v05.html">Common Public License Version 0.5</a> (&quot;CPL&quot;). For purposes of the CPL, 
-&quot;Program&quot; will mean the Content.</p>
-		
-<h3>Source Code</h3>
+<p>Eclipse.org makes available all content in this plug-in (&quot;Content&quot;).  Unless otherwise indicated below, the Content is provided to you under the terms and conditions of the
+Common Public License Version 0.5 (&quot;CPL&quot;).  A copy of the CPL is available at <a href="http://www.eclipse.org/legal/cpl-v05.html">http://www.eclipse.org/legal/cpl-v05.html</a>.
+For purposes of the CPL, &quot;Program&quot; will mean the Content.</p>
 
-<p>This plug-in contains source code zip files (&quot;Source Zips&quot;) that correspond to binary content in other plug-ins.
-These Source Zips may be distributed under different license agreements and/or notices.  Details about these license agreements and notices are
-contained in &quot;about.html&quot; files (&quot;Abouts&quot;) located in sub-directories in the src/ directory of this plug-in.
-Such Abouts govern your use of the Source Zips in that directory, not the CPL.</p>
-		
+<h3>Source Code</h3>
+<p>This plug-in contains source code zip files (&quot;Source Zips&quot;) that correspond to binary content in other plug-ins. These Source Zips may be distributed under different license
+agreements and/or notices. Details about these license agreements and notices are contained in &quot;about.html&quot; files (&quot;Abouts&quot;) located in sub-directories in the
+src/ directory of this plug-in. Such Abouts govern your use of the Source Zips in that directory, not the CPL.</p>
 
 <h3>Contributions</h3>
 
