add debug plugins

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api.htm
@@ -43,6 +43,13 @@ prerequisite if you are using the JDT UI classes.</li>
   <li><b>org.eclipse.jdt.launching</b> is the
 plug-in that defines the Java launching and runtime support. You should list this plug-in as a
 prerequisite if you need to launch Java virtual machines programmatically.</li>
+  <li><b>org.eclipse.jdt.debug</b> is the
+plug-in that defines the Java debug model. You should list this plug-in as a
+prerequisite if you need to programmatically access objects in a program being debugged.</li>
+  <li><b>org.eclipse.jdt.debug.ui</b> is the
+plug-in that defines the Java debug UI extensions. You should list this plug-in as a
+prerequisite if you need to programmatically access the prompting source locator or 
+Java launch configuration tabs.</li>
 </ul>
 <P><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 </BODY>
