remove VM Runner Result

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
@@ -24,8 +24,7 @@ The following roadmap outlines the major function in the remaining
     <b><a href="../reference/api/org/eclipse/jdt/launching/JavaRuntime.html">JavaRuntime</a></b> implements static methods that let you register a vm for a particular project.&nbsp;
     A family of VM's (such as the JDK) is represented by the <a href="../reference/api/org/eclipse/jdt/launching/IVMInstallType.html"><b>IVMInstallType</b></a> class.
 <a href="../reference/api/org/eclipse/jdt/launching/IVMInstall.html"><b>IVMInstall</b></a> represents particular installations within a family.&nbsp;
-    The <a href="../reference/api/org/eclipse/jdt/launching/IVMRunner.html"><b>IVMRunner</b></a> and
-<a href="../reference/api/org/eclipse/jdt/launching/VMRunnerResult.html"><b> VMRunnerResult</b></a> classes are used to start a particular Java VM, register its processes with the JDT, and return information from the launched program.</li>
+    The <a href="../reference/api/org/eclipse/jdt/launching/IVMRunner.html"><b>IVMRunner</b></a> is used to start a particular Java VM and register its processes with the debug plug-in.</li>
   <li>&nbsp; <b><a href="../reference/api/org/eclipse/jdt/core/search/package-summary.html"> org.eclipse.jdt.core.search</a></b> supports searching the workspace Java elements that match a particular description.&nbsp;
     <a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html"><b>SearchEngine</b></a> allows you to set up searches in the workspace. You can search for particular patterns inside a Java element. You can also scope the search according to several predefined search types: searching for declarations of the pattern, implementors of the pattern, references to the pattern, or all occurrences of the pattern.</li>
   <li><a href="../reference/api/org/eclipse/jdt/core/jdom/package-summary.html"><b>org.eclipse.jdt.core.jdom</b></a>
